--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: ${SPRING_DATASOURCE_URL}
-    password: ${SPRING_DATASOURCE_PASSWORD}
-    username: ${SPRING_DATASOURCE_USERNAME}
+    url: ${env.SPRING_DATASOURCE_URL}
+    password: ${env.SPRING_DATASOURCE_PASSWORD}
+    username: ${env.SPRING_DATASOURCE_USERNAME}
   jpa:
     hibernate:
       ddl-auto: create-drop
@@ -13,4 +13,12 @@ spring:
         format_sql: true
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+  security:
+    encryption:
+      key: mySecretKey
+
+
+
+
+
 
